fix : HomeService에서 Stream을 List로 변경하는 코드 오류 수정